# PPSSPP Core sources

ppssppSrc =  [
	'ppsspp/ext/cpu_features/src/stack_line_reader.c',
	'ppsspp/ext/cpu_features/src/filesystem.c',
	'ppsspp/ext/cpu_features/src/string_view.c',
	'ppsspp/ext/libkirk/bn.c',
	'ppsspp/ext/sfmt19937/SFMT.c',
	'ppsspp/ext/libkirk/ec.c',
	'ppsspp/ext/udis86/syn-intel.c',
	'ppsspp/ext/libkirk/kirk_engine.c',
	'ppsspp/ext/libkirk/AES.c',
	'ppsspp/ext/libkirk/amctrl.c',
	'ppsspp/ext/libpng17/png.c',
	'ppsspp/ext/libkirk/SHA1.c',
	'ppsspp/ext/udis86/decode.c',
	'ppsspp/ext/udis86/syn-att.c',
	'ppsspp/ext/xxhash.c',
	'ppsspp/ext/udis86/itab.c',
	'ppsspp/ext/udis86/syn.c',
	'ppsspp/ext/miniupnp/miniupnpc/src/addr_is_reserved.c',
	'ppsspp/ext/libchdr/deps/lzma-22.01/src/Alloc.c',
	'ppsspp/ext/rcheevos/src/rapi/rc_api_common.c',
	'ppsspp/ext/zstd/lib/common/debug.c',
	'ppsspp/ext/lua/lapi.c',
	'ppsspp/ext/libzip/zip_add.c',
	'ppsspp/ext/lua/lauxlib.c',
	'ppsspp/ext/zstd/lib/common/entropy_common.c',
	'ppsspp/ext/lua/lbaselib.c',
	'ppsspp/ext/miniupnp/miniupnpc/src/connecthostport.c',
	'ppsspp/ext/lua/lcode.c',
	'ppsspp/ext/lua/lcorolib.c',
	'ppsspp/ext/libzip/zip_add_dir.c',
	'ppsspp/ext/miniupnp/miniupnpc/src/igd_desc_parse.c',
	'ppsspp/ext/libzip/zip_algorithm_deflate.c',
	'ppsspp/ext/libzip/zip_add_entry.c',
	'ppsspp/ext/libchdr/deps/lzma-22.01/src/Bcj2.c',
	'ppsspp/ext/miniupnp/miniupnpc/src/minisoap.c',
	'ppsspp/ext/miniupnp/miniupnpc/src/minissdpc.c',
	'ppsspp/ext/rcheevos/src/rapi/rc_api_editor.c',
	'ppsspp/ext/rcheevos/src/rapi/rc_api_info.c',
	'ppsspp/ext/libzip/zip_buffer.c',
	'ppsspp/ext/rcheevos/src/rapi/rc_api_runtime.c',
	'ppsspp/ext/libzip/zip_close.c',
	'ppsspp/ext/libzip/zip_delete.c',
	'ppsspp/ext/miniupnp/miniupnpc/src/miniupnpc.c',
	'ppsspp/ext/miniupnp/miniupnpc/src/miniwget.c',
	'ppsspp/ext/libzip/zip_dir_add.c',
	'ppsspp/ext/libzip/zip_dirent.c',
	'ppsspp/ext/libchdr/deps/lzma-22.01/src/Bcj2Enc.c',
	'ppsspp/ext/libchdr/deps/lzma-22.01/src/Bra.c',
	'ppsspp/ext/libchdr/deps/lzma-22.01/src/Bra86.c',
	'ppsspp/ext/rcheevos/src/rapi/rc_api_user.c',
	'ppsspp/ext/rcheevos/src/rcheevos/alloc.c',
	'ppsspp/ext/rcheevos/src/rcheevos/condition.c',
	'ppsspp/ext/zstd/lib/common/error_private.c',
	'ppsspp/ext/rcheevos/src/rcheevos/consoleinfo.c',
	'ppsspp/ext/udis86/udis86.c',
	'ppsspp/ext/rcheevos/src/rcheevos/condset.c',
	'ppsspp/ext/libzip/zip_discard.c',
	'ppsspp/ext/libzip/zip_entry.c',
	'ppsspp/ext/libzip/zip_error.c',
	'ppsspp/ext/libchdr/deps/lzma-22.01/src/CpuArch.c',
	'ppsspp/ext/zstd/lib/common/fse_decompress.c',
	'ppsspp/ext/rcheevos/src/rcheevos/format.c',
	'ppsspp/ext/zstd/lib/common/pool.c',
	'ppsspp/ext/zstd/lib/common/threading.c',
	'ppsspp/ext/libchdr/deps/lzma-22.01/src/Delta.c',
	'ppsspp/ext/zstd/lib/common/xxhash.c',
	'ppsspp/ext/libchdr/deps/lzma-22.01/src/LzFind.c',
	'ppsspp/ext/libchdr/deps/lzma-22.01/src/LzFindOpt.c',
	'ppsspp/ext/libchdr/deps/lzma-22.01/src/LzmaDec.c',
	'ppsspp/ext/cpu_features/src/impl_aarch64_linux_or_android.c',
	'ppsspp/ext/zstd/lib/common/zstd_common.c',
	'ppsspp/ext/cpu_features/src/impl_aarch64_windows.c',
	'ppsspp/ext/cpu_features/src/impl_aarch64_macos_or_iphone.c',
	'ppsspp/ext/libchdr/deps/lzma-22.01/src/LzmaEnc.c',
	'ppsspp/ext/libzip/zip_error_clear.c',
	'ppsspp/ext/zstd/lib/compress/fse_compress.c',
	'ppsspp/ext/cpu_features/src/impl_loongarch_linux.c',
	'ppsspp/ext/lua/lctype.c',
	'ppsspp/ext/lua/ldblib.c',
	'ppsspp/ext/cpu_features/src/impl_arm_linux_or_android.c',
	'ppsspp/ext/zstd/lib/compress/hist.c',
	'ppsspp/ext/cpu_features/src/impl_mips_linux_or_android.c',
	'ppsspp/ext/cpu_features/src/impl_ppc_linux.c',
	'ppsspp/ext/cpu_features/src/impl_riscv_linux.c',
	'ppsspp/ext/cpu_features/src/impl_s390x_linux.c',
	'ppsspp/ext/cpu_features/src/impl_x86_freebsd.c',
	'ppsspp/ext/cpu_features/src/impl_x86_linux_or_android.c',
	'ppsspp/ext/libchdr/deps/lzma-22.01/src/Lzma86Dec.c',
	'ppsspp/ext/miniupnp/miniupnpc/src/minixml.c',
	'ppsspp/ext/libchdr/deps/lzma-22.01/src/Lzma86Enc.c',
	'ppsspp/ext/lua/ldebug.c',
	'ppsspp/ext/libchdr/deps/lzma-22.01/src/LzmaLib.c',
	'ppsspp/ext/lua/ldo.c',
	'ppsspp/ext/libchdr/deps/lzma-22.01/src/Sort.c',
	'ppsspp/ext/lua/ldump.c',
	'ppsspp/ext/libchdr/src/libchdr_bitstream.c',
	'ppsspp/ext/cpu_features/src/impl_x86_macos.c',
	'ppsspp/ext/lua/lfunc.c',
	'ppsspp/ext/rcheevos/src/rcheevos/lboard.c',
	'ppsspp/ext/lua/lgc.c',
	'ppsspp/ext/zstd/lib/compress/huf_compress.c',
	'ppsspp/ext/rcheevos/src/rcheevos/memref.c',
	'ppsspp/ext/rcheevos/src/rcheevos/operand.c',
	'ppsspp/ext/rcheevos/src/rc_compat.c',
	'ppsspp/ext/libzip/zip_error_get.c',
	'ppsspp/ext/rcheevos/src/rc_util.c',
	'ppsspp/ext/libzip/zip_error_get_sys_type.c',
	'ppsspp/ext/libzip/zip_error_strerror.c',
	'ppsspp/ext/libzip/zip_error_to_str.c',
	'ppsspp/ext/libzip/zip_extra_field.c',
	'ppsspp/ext/libchdr/src/libchdr_cdrom.c',
	'ppsspp/ext/libchdr/src/libchdr_chd.c',
	'ppsspp/ext/miniupnp/miniupnpc/src/portlistingparse.c',
	'ppsspp/ext/rcheevos/src/rc_client.c',
	'ppsspp/ext/libchdr/src/libchdr_flac.c',
	'ppsspp/ext/libchdr/src/libchdr_huffman.c',
	'ppsspp/ext/miniupnp/miniupnpc/src/receivedata.c',
	'ppsspp/ext/rcheevos/src/rcheevos/rc_validate.c',
	'ppsspp/ext/miniupnp/miniupnpc/src/upnpcommands.c',
	'ppsspp/ext/rcheevos/src/rcheevos/richpresence.c',
	'ppsspp/ext/miniupnp/miniupnpc/src/upnpdev.c',
	'ppsspp/ext/miniupnp/miniupnpc/src/upnperrors.c',
	'ppsspp/ext/rcheevos/src/rcheevos/runtime.c',
	'ppsspp/ext/rcheevos/src/rcheevos/runtime_progress.c',
	'ppsspp/ext/miniupnp/miniupnpc/src/upnpreplyparse.c',
	'ppsspp/ext/libzip/zip_extra_field_api.c',
	'ppsspp/ext/rcheevos/src/rcheevos/trigger.c',
	'ppsspp/ext/rcheevos/src/rcheevos/value.c',
	'ppsspp/ext/rcheevos/src/rhash/md5.c',
	'ppsspp/ext/libpng17/pngerror.c',
	'ppsspp/ext/libpng17/pngget.c',
	'ppsspp/ext/libzip/zip_fclose.c',
	'ppsspp/ext/libpng17/pngmem.c',
	'ppsspp/ext/libpng17/pngpread.c',
	'ppsspp/ext/zstd/lib/compress/zstd_compress.c',
	'ppsspp/ext/libzip/zip_fdopen.c',
	'ppsspp/ext/libzip/zip_file_add.c',
	'ppsspp/ext/lua/linit.c',
	'ppsspp/ext/libzip/zip_file_error_clear.c',
	'ppsspp/ext/lua/liolib.c',
	'ppsspp/ext/lua/llex.c',
	'ppsspp/ext/libzip/zip_file_error_get.c',
	'ppsspp/ext/libzip/zip_file_get_comment.c',
	'ppsspp/ext/libzip/zip_file_get_external_attributes.c',
	'ppsspp/ext/libpng17/pngread.c',
	'ppsspp/ext/libzip/zip_file_get_offset.c',
	'ppsspp/ext/libpng17/pngrio.c',
	'ppsspp/ext/libpng17/pngrtran.c',
	'ppsspp/ext/libzip/zip_file_replace.c',
	'ppsspp/ext/libzip/zip_file_rename.c',
	'ppsspp/ext/lua/lmathlib.c',
	'ppsspp/ext/cpu_features/src/impl_x86_windows.c',
	'ppsspp/ext/lua/lmem.c',
	'ppsspp/ext/lua/loadlib.c',
	'ppsspp/ext/libzip/zip_file_set_comment.c',
	'ppsspp/ext/lua/lobject.c',
	'ppsspp/ext/libpng17/pngrutil.c',
	'ppsspp/ext/lua/lopcodes.c',
	'ppsspp/ext/libpng17/pngset.c',
	'ppsspp/ext/libpng17/pngtrans.c',
	'ppsspp/ext/libpng17/pngwio.c',
	'ppsspp/ext/libpng17/pngwrite.c',
	'ppsspp/ext/lua/loslib.c',
	'ppsspp/ext/lua/lparser.c',
	'ppsspp/ext/libzip/zip_file_set_encryption.c',
	'ppsspp/ext/libpng17/pngwutil.c',
	'ppsspp/ext/libpng17/pngwtran.c',
	'ppsspp/ext/libzip/zip_file_set_external_attributes.c',
	'ppsspp/ext/libzip/zip_file_strerror.c',
	'ppsspp/ext/libzip/zip_file_set_mtime.c',
	'ppsspp/ext/lua/lstate.c',
	'ppsspp/ext/lua/lstring.c',
	'ppsspp/ext/lua/lstrlib.c',
	'ppsspp/ext/libzip/zip_fopen.c',
	'ppsspp/ext/zstd/lib/compress/zstd_compress_literals.c',
	'ppsspp/ext/libzip/zip_fopen_encrypted.c',
	'ppsspp/ext/libzip/zip_fopen_index.c',
	'ppsspp/ext/libzip/zip_fopen_index_encrypted.c',
	'ppsspp/ext/libzip/zip_fseek.c',
	'ppsspp/ext/libzip/zip_fread.c',
	'ppsspp/ext/libzip/zip_ftell.c',
	'ppsspp/ext/libzip/zip_get_archive_comment.c',
	'ppsspp/ext/zstd/lib/compress/zstd_compress_sequences.c',
	'ppsspp/ext/libzip/zip_get_archive_flag.c',
	'ppsspp/ext/zstd/lib/compress/zstd_compress_superblock.c',
	'ppsspp/ext/zstd/lib/compress/zstd_double_fast.c',
	'ppsspp/ext/libzip/zip_get_encryption_implementation.c',
	'ppsspp/ext/libzip/zip_get_name.c',
	'ppsspp/ext/libzip/zip_get_file_comment.c',
	'ppsspp/ext/lua/ltable.c',
	'ppsspp/ext/libzip/zip_get_num_entries.c',
	'ppsspp/ext/libzip/zip_get_num_files.c',
	'ppsspp/ext/libzip/zip_hash.c',
	'ppsspp/ext/libzip/zip_io_util.c',
	'ppsspp/ext/libzip/zip_libzip_version.c',
	'ppsspp/ext/libzip/zip_memdup.c',
	'ppsspp/ext/zstd/lib/compress/zstd_fast.c',
	'ppsspp/ext/libzip/zip_name_locate.c',
	'ppsspp/ext/zstd/lib/compress/zstd_lazy.c',
	'ppsspp/ext/libzip/zip_new.c',
	'ppsspp/ext/zstd/lib/compress/zstd_ldm.c',
	'ppsspp/ext/lua/ltablib.c',
	'ppsspp/ext/zstd/lib/compress/zstd_opt.c',
	'ppsspp/ext/lua/ltm.c',
	'ppsspp/ext/libzip/zip_open.c',
	'ppsspp/ext/libzip/zip_pkware.c',
	'ppsspp/ext/lua/lundump.c',
	'ppsspp/ext/libzip/zip_progress.c',
	'ppsspp/ext/libzip/zip_rename.c',
	'ppsspp/ext/libzip/zip_replace.c',
	'ppsspp/ext/libzip/zip_set_archive_comment.c',
	'ppsspp/ext/libzip/zip_set_archive_flag.c',
	'ppsspp/ext/zstd/lib/compress/zstdmt_compress.c',
	'ppsspp/ext/libzip/zip_set_default_password.c',
	'ppsspp/ext/libzip/zip_set_file_comment.c',
	'ppsspp/ext/libzip/zip_set_file_compression.c',
	'ppsspp/ext/libzip/zip_set_name.c',
	'ppsspp/ext/lua/lutf8lib.c',
	'ppsspp/ext/libzip/zip_source_accept_empty.c',
	'ppsspp/ext/lua/lvm.c',
	'ppsspp/ext/lua/lzio.c',
	'ppsspp/ext/libzip/zip_source_begin_write.c',
	'ppsspp/ext/libzip/zip_source_begin_write_cloning.c',
	'ppsspp/ext/zstd/lib/decompress/huf_decompress.c',
	'ppsspp/ext/libzip/zip_source_buffer.c',
	'ppsspp/ext/libzip/zip_source_call.c',
	'ppsspp/ext/libzip/zip_source_close.c',
	'ppsspp/ext/libzip/zip_source_commit_write.c',
	'ppsspp/ext/libzip/zip_source_compress.c',
	'ppsspp/ext/zstd/lib/decompress/zstd_ddict.c',
	'ppsspp/ext/libzip/zip_source_crc.c',
	'ppsspp/ext/zstd/lib/decompress/zstd_decompress.c',
	'ppsspp/ext/zstd/lib/dictBuilder/cover.c',
	'ppsspp/ext/zstd/lib/decompress/zstd_decompress_block.c',
	'ppsspp/ext/zstd/lib/dictBuilder/divsufsort.c',
	'ppsspp/ext/zstd/lib/dictBuilder/fastcover.c',
	'ppsspp/ext/libzip/zip_source_error.c',
	'ppsspp/ext/zstd/lib/dictBuilder/zdict.c',
	'ppsspp/ext/libzip/zip_source_file_common.c',
	'ppsspp/ext/zstd/lib/decompress/huf_decompress_amd64.S',
	'ppsspp/ext/libzip/zip_source_file_stdio.c',
	'ppsspp/ext/libzip/zip_source_free.c',
	'ppsspp/ext/libzip/zip_source_function.c',
	'ppsspp/ext/libzip/zip_source_get_file_attributes.c',
	'ppsspp/ext/libzip/zip_source_is_deleted.c',
	'ppsspp/ext/libzip/zip_source_layered.c',
	'ppsspp/ext/libzip/zip_source_open.c',
	'ppsspp/ext/libzip/zip_source_pkware_decode.c',
	'ppsspp/ext/libzip/zip_source_pkware_encode.c',
	'ppsspp/ext/libzip/zip_source_read.c',
	'ppsspp/ext/libzip/zip_source_remove.c',
	'ppsspp/ext/libzip/zip_source_rollback_write.c',
	'ppsspp/ext/libzip/zip_source_seek.c',
	'ppsspp/ext/libzip/zip_source_seek_write.c',
	'ppsspp/ext/libzip/zip_source_stat.c',
	'ppsspp/ext/libzip/zip_source_supports.c',
	'ppsspp/ext/libzip/zip_source_tell.c',
	'ppsspp/ext/libzip/zip_source_tell_write.c',
	'ppsspp/ext/libzip/zip_source_window.c',
	'ppsspp/ext/libzip/zip_source_write.c',
	'ppsspp/ext/libzip/zip_source_zip.c',
	'ppsspp/ext/libzip/zip_source_zip_new.c',
	'ppsspp/ext/libzip/zip_stat_init.c',
	'ppsspp/ext/libzip/zip_stat.c',
	'ppsspp/ext/libzip/zip_stat_index.c',
	'ppsspp/ext/libzip/zip_strerror.c',
	'ppsspp/ext/libzip/zip_string.c',
	'ppsspp/ext/libzip/zip_unchange.c',
	'ppsspp/ext/libzip/zip_unchange_all.c',
	'ppsspp/ext/libzip/zip_unchange_archive.c',
	'ppsspp/ext/libzip/zip_unchange_data.c',
	'ppsspp/ext/libzip/zip_utf-8.c',
	'ppsspp/ext/libzip/zip_err_str.c',
	'ppsspp/ext/libzip/zip_mkstempm.c',
	'ppsspp/ext/libzip/zip_source_file_stdio_named.c',
	'ppsspp/ext/libzip/zip_random_unix.c',
	'ppsspp/Common/GPU/OpenGL/gl3stub.c',
	'ppsspp/Common/Math/fast/fast_matrix.c',
]

ppssppIncludeDirs = [
  '.',
  '..',
  'ppsspp/ext/glslang',
  'ppsspp/ext/glew',
  'ppsspp',
  'ppsspp/libretro',
  'ppsspp/ext/OpenXR-SDK/include',
  'ppsspp/Common',
  'ppsspp/ext/libzip',
  'ppsspp/ext/libpng17',
  'ppsspp/ext/zstd/lib',
  'ppsspp/ext/libchdr/include',
  'ppsspp/build',
  'ppsspp/ext/miniupnp/miniupnpc/src',
  'ppsspp/ext/miniupnp/miniupnpc/include',
  'ppsspp/ext/snappy/',
  'ppsspp/ext/rcheevos/include/',
  'ppsspp/ext/cmake/cpu_features/../../cpu_features/include',
  'ppsspp/ext/libchdr/deps/lzma-22.01/include/',
  'ppsspp/ext/lua/',
]

ppssppCompileArgs = [
	   '-DHAVE_GETAUXVAL',
	   '-DHTTPS_NOT_AVAILABLE',
	   '-DMINIUPNPC_SET_SOCKET_TIMEOUT',
	   '-DMINIUPNP_STATICLIB',
	   '-DNO_ARMIPS=1',
	   '-DPNG_ARM_NEON_OPT=0',
	   '-DSDL',
	   '-DSHARED_ZLIB',
	   '-DSTACK_LINE_READER_BUFFER_SIZE=1024',
	   '-DUSE_SDL2_TTF',
	   '-DUSE_SDL2_TTF_FONTCONFIG',
	   '-DWITH_UPNP',
	   '-D_BSD_SOURCE',
	   '-D_DEFAULT_SOURCE',
	   '-D_FILE_OFFSET_BITS=64',
	   '-D_LARGEFILE64_SOURCE=1',
	   '-D_POSIX_C_SOURCE=200112L',
	   '-D_XOPEN_SOURCE_EXTENDED',
	   '-D__BSD_VISIBLE=1',
	   '-D__STDC_CONSTANT_MACROS',
       '-DNDEBUG',
	   '-D_NDEBUG'
	   
]

# ppsspp Core Configuration

 ppssppDependency = declare_dependency(
  compile_args        : [  ppssppCompileArgs ],
  include_directories : include_directories(ppssppIncludeDirs),
  sources             : [ ppssppSrc ],
  dependencies        : [  
                          dependency('sdl2',  required : true),
                        ]
 )
