# PPSSPP Core sources

ppssppSrc =  [
	'ppsspp/build/git-version.cpp',
	'ppsspp/Common/ABI.cpp',
	'ppsspp/Common/Arm64Emitter.cpp',
	'ppsspp/Common/ArmCPUDetect.cpp',
	'ppsspp/Common/ArmEmitter.cpp',
	'ppsspp/Common/Buffer.cpp',
	'ppsspp/Common/CPUDetect.cpp',
	'ppsspp/Common/Crypto/_md5.cpp',
	'ppsspp/Common/Crypto/_sha1.cpp',
	'ppsspp/Common/Crypto/sha256.cpp',
	'ppsspp/Common/Data/Color/RGBAUtil.cpp',
	'ppsspp/Common/Data/Convert/ColorConv.cpp',
	'ppsspp/Common/Data/Convert/SmallDataConvert.cpp',
	'ppsspp/Common/Data/Encoding/Base64.cpp',
	'ppsspp/Common/Data/Encoding/Compression.cpp',
	'ppsspp/Common/Data/Encoding/Utf8.cpp',
	'ppsspp/Common/Data/Format/DDSLoad.cpp',
	'ppsspp/Common/Data/Format/IniFile.cpp',
	'ppsspp/Common/Data/Format/JSONReader.cpp',
	'ppsspp/Common/Data/Format/JSONWriter.cpp',
	'ppsspp/Common/Data/Format/RIFF.cpp',
	'ppsspp/Common/Data/Format/ZIMLoad.cpp',
	'ppsspp/Common/Data/Format/ZIMSave.cpp',
	'ppsspp/Common/Data/Hash/Hash.cpp',
	'ppsspp/Common/Data/Text/I18n.cpp',
	'ppsspp/Common/Data/Text/Parsers.cpp',
	'ppsspp/Common/Data/Text/WrapText.cpp',
	'ppsspp/Common/ExceptionHandlerSetup.cpp',
	'ppsspp/Common/FakeCPUDetect.cpp',
	'ppsspp/Common/File/AndroidContentURI.cpp',
	'ppsspp/Common/File/AndroidStorage.cpp',
	'ppsspp/Common/File/DirListing.cpp',
	'ppsspp/Common/File/DiskFree.cpp',
	'ppsspp/Common/File/FileDescriptor.cpp',
	'ppsspp/Common/File/FileUtil.cpp',
	'ppsspp/Common/File/Path.cpp',
	'ppsspp/Common/File/PathBrowser.cpp',
	'ppsspp/Common/File/VFS/DirectoryReader.cpp',
	'ppsspp/Common/File/VFS/VFS.cpp',
	'ppsspp/Common/GhidraClient.cpp',
	'ppsspp/Common/GPU/GPUBackendCommon.cpp',
	'ppsspp/Common/GPU/Shader.cpp',
	'ppsspp/Common/GPU/ShaderWriter.cpp',
	'ppsspp/Common/GPU/thin3d.cpp',
	'ppsspp/Common/Input/GestureDetector.cpp',
	'ppsspp/Common/Input/InputState.cpp',
	'ppsspp/Common/Log.cpp',
	'ppsspp/Common/Log/ConsoleListener.cpp',
	'ppsspp/Common/Log/LogManager.cpp',
	'ppsspp/Common/LogReporting.cpp',
	'ppsspp/Common/LoongArchCPUDetect.cpp',
	'ppsspp/Common/Math/curves.cpp',
	'ppsspp/Common/Math/expression_parser.cpp',
	'ppsspp/Common/Math/fast/fast_matrix.c',
	'ppsspp/Common/Math/lin/matrix4x4.cpp',
	'ppsspp/Common/Math/lin/vec3.cpp',
	'ppsspp/Common/Math/math_util.cpp',
	'ppsspp/Common/Math/Statistics.cpp',
	'ppsspp/Common/MemArenaAndroid.cpp',
	'ppsspp/Common/MemArenaDarwin.cpp',
	'ppsspp/Common/MemArenaHorizon.cpp',
	'ppsspp/Common/MemArenaPosix.cpp',
	'ppsspp/Common/MemArenaWin32.cpp',
	'ppsspp/Common/MemoryUtil.cpp',
	'ppsspp/Common/MemoryUtilHorizon.cpp',
	'ppsspp/Common/MipsCPUDetect.cpp',
	'ppsspp/Common/MipsEmitter.cpp',
	'ppsspp/Common/Net/HTTPClient.cpp',
	'ppsspp/Common/Net/HTTPHeaders.cpp',
	'ppsspp/Common/Net/HTTPNaettRequest.cpp',
	'ppsspp/Common/Net/HTTPRequest.cpp',
	'ppsspp/Common/Net/HTTPServer.cpp',
	'ppsspp/Common/Net/NetBuffer.cpp',
	'ppsspp/Common/Net/Resolve.cpp',
	'ppsspp/Common/Net/Sinks.cpp',
	'ppsspp/Common/Net/URL.cpp',
	'ppsspp/Common/Net/WebsocketServer.cpp',
	'ppsspp/Common/OSVersion.cpp',
	'ppsspp/Common/Profiler/Profiler.cpp',
	'ppsspp/Common/Render/DrawBuffer.cpp',
	'ppsspp/Common/Render/ManagedTexture.cpp',
	'ppsspp/Common/Render/Text/draw_text.cpp',
	'ppsspp/Common/Render/Text/draw_text_android.cpp',
	'ppsspp/Common/Render/Text/draw_text_qt.cpp',
	'ppsspp/Common/Render/Text/draw_text_sdl.cpp',
	'ppsspp/Common/Render/Text/draw_text_uwp.cpp',
	'ppsspp/Common/Render/Text/draw_text_win.cpp',
	'ppsspp/Common/Render/TextureAtlas.cpp',
	'ppsspp/Common/RiscVCPUDetect.cpp',
	'ppsspp/Common/RiscVEmitter.cpp',
	'ppsspp/Common/Serialize/Serializer.cpp',
	'ppsspp/Common/StringUtils.cpp',
	'ppsspp/Common/SysError.cpp',
	'ppsspp/Common/System/_Display.cpp',
	'ppsspp/Common/System/OSD.cpp',
	'ppsspp/Common/System/Request.cpp',
	'ppsspp/Common/Thread/ParallelLoop.cpp',
	'ppsspp/Common/Thread/ThreadManager.cpp',
	'ppsspp/Common/Thread/ThreadUtil.cpp',
	'ppsspp/Common/Thunk.cpp',
	'ppsspp/Common/TimeUtil.cpp',
	'ppsspp/Common/UI/AsyncImageFileView.cpp',
	'ppsspp/Common/UI/Context.cpp',
	'ppsspp/Common/UI/IconCache.cpp',
	'ppsspp/Common/UI/PopupScreens.cpp',
	'ppsspp/Common/UI/Root.cpp',
	'ppsspp/Common/UI/Screen.cpp',
	'ppsspp/Common/UI/ScrollView.cpp',
	'ppsspp/Common/UI/Tween.cpp',
	'ppsspp/Common/UI/UI.cpp',
	'ppsspp/Common/UI/UIScreen.cpp',
	'ppsspp/Common/UI/View.cpp',
	'ppsspp/Common/UI/ViewGroup.cpp',
	'ppsspp/Common/VR/OpenXRLoader.cpp',
	'ppsspp/Common/VR/PPSSPPVR.cpp',
	'ppsspp/Common/VR/VRBase.cpp',
	'ppsspp/Common/VR/VRFramebuffer.cpp',
	'ppsspp/Common/VR/VRInput.cpp',
	'ppsspp/Common/VR/VRMath.cpp',
	'ppsspp/Common/VR/VRRenderer.cpp',
	'ppsspp/Common/x64Analyzer.cpp',
	'ppsspp/Common/x64Emitter.cpp',
	'ppsspp/Core/Compatibility.cpp',
	'ppsspp/Core/Config.cpp',
	'ppsspp/Core/ConfigSettings.cpp',
	'ppsspp/Core/ControlMapper.cpp',
	'ppsspp/Core/Core.cpp',
	'ppsspp/Core/CoreTiming.cpp',
	'ppsspp/Core/Debugger/Breakpoints.cpp',
	'ppsspp/Core/Debugger/DisassemblyManager.cpp',
	'ppsspp/Core/Debugger/MemBlockInfo.cpp',
	'ppsspp/Core/Debugger/SymbolMap.cpp',
	'ppsspp/Core/Dialog/PSPDialog.cpp',
	'ppsspp/Core/Dialog/PSPGamedataInstallDialog.cpp',
	'ppsspp/Core/Dialog/PSPMsgDialog.cpp',
	'ppsspp/Core/Dialog/PSPNetconfDialog.cpp',
	'ppsspp/Core/Dialog/PSPNpSigninDialog.cpp',
	'ppsspp/Core/Dialog/PSPOskConstants.cpp',
	'ppsspp/Core/Dialog/PSPOskDialog.cpp',
	'ppsspp/Core/Dialog/PSPPlaceholderDialog.cpp',
	'ppsspp/Core/Dialog/PSPSaveDialog.cpp',
	'ppsspp/Core/Dialog/PSPScreenshotDialog.cpp',
	'ppsspp/Core/Dialog/SavedataParam.cpp',
	'ppsspp/Core/ELF/ElfReader.cpp',
	'ppsspp/Core/ELF/ParamSFO.cpp',
	'ppsspp/Core/ELF/PBPReader.cpp',
	'ppsspp/Core/ELF/PrxDecrypter.cpp',
	'ppsspp/Core/FileLoaders/CachingFileLoader.cpp',
	'ppsspp/Core/FileLoaders/DiskCachingFileLoader.cpp',
	'ppsspp/Core/FileLoaders/HTTPFileLoader.cpp',
	'ppsspp/Core/FileLoaders/LocalFileLoader.cpp',
	'ppsspp/Core/FileLoaders/RamCachingFileLoader.cpp',
	'ppsspp/Core/FileLoaders/RetryingFileLoader.cpp',
	'ppsspp/Core/FileSystems/BlobFileSystem.cpp',
	'ppsspp/Core/FileSystems/BlockDevices.cpp',
	'ppsspp/Core/FileSystems/DirectoryFileSystem.cpp',
	'ppsspp/Core/FileSystems/_FileSystem.cpp',
	'ppsspp/Core/FileSystems/ISOFileSystem.cpp',
	'ppsspp/Core/FileSystems/MetaFileSystem.cpp',
	'ppsspp/Core/FileSystems/tlzrc.cpp',
	'ppsspp/Core/FileSystems/VirtualDiscFileSystem.cpp',
	'ppsspp/Core/Font/PGF.cpp',
	'ppsspp/Core/FrameTiming.cpp',
	'ppsspp/Core/HDRemaster.cpp',
	'ppsspp/Core/HLE/AtracCtx.cpp',
	'ppsspp/Core/HLE/AtracCtx2.cpp',
	'ppsspp/Core/HLE/HLE.cpp',
	'ppsspp/Core/HLE/HLEHelperThread.cpp',
	'ppsspp/Core/HLE/HLETables.cpp',
	'ppsspp/Core/HLE/KUBridge.cpp',
	'ppsspp/Core/HLE/NetInetConstants.cpp',
	'ppsspp/Core/HLE/Plugins.cpp',
	'ppsspp/Core/HLE/proAdhoc.cpp',
	'ppsspp/Core/HLE/proAdhocServer.cpp',
	'ppsspp/Core/HLE/ReplaceTables.cpp',
	'ppsspp/Core/HLE/sceAac.cpp',
	'ppsspp/Core/HLE/sceAdler.cpp',
	'ppsspp/Core/HLE/sceAtrac.cpp',
	'ppsspp/Core/HLE/sceAudio.cpp',
	'ppsspp/Core/HLE/sceAudiocodec.cpp',
	'ppsspp/Core/HLE/sceAudioRouting.cpp',
	'ppsspp/Core/HLE/sceCcc.cpp',
	'ppsspp/Core/HLE/sceChnnlsv.cpp',
	'ppsspp/Core/HLE/sceCtrl.cpp',
	'ppsspp/Core/HLE/sceDeflt.cpp',
	'ppsspp/Core/HLE/sceDisplay.cpp',
	'ppsspp/Core/HLE/sceDmac.cpp',
	'ppsspp/Core/HLE/sceFont.cpp',
	'ppsspp/Core/HLE/sceG729.cpp',
	'ppsspp/Core/HLE/sceGameUpdate.cpp',
	'ppsspp/Core/HLE/sceGe.cpp',
	'ppsspp/Core/HLE/sceHeap.cpp',
	'ppsspp/Core/HLE/sceHprm.cpp',
	'ppsspp/Core/HLE/sceHttp.cpp',
	'ppsspp/Core/HLE/sceImpose.cpp',
	'ppsspp/Core/HLE/sceIo.cpp',
	'ppsspp/Core/HLE/sceJpeg.cpp',
	'ppsspp/Core/HLE/sceKernel.cpp',
	'ppsspp/Core/HLE/sceKernelAlarm.cpp',
	'ppsspp/Core/HLE/sceKernelEventFlag.cpp',
	'ppsspp/Core/HLE/sceKernelHeap.cpp',
	'ppsspp/Core/HLE/sceKernelInterrupt.cpp',
	'ppsspp/Core/HLE/sceKernelMbx.cpp',
	'ppsspp/Core/HLE/sceKernelMemory.cpp',
	'ppsspp/Core/HLE/sceKernelModule.cpp',
	'ppsspp/Core/HLE/sceKernelMsgPipe.cpp',
	'ppsspp/Core/HLE/sceKernelMutex.cpp',
	'ppsspp/Core/HLE/sceKernelSemaphore.cpp',
	'ppsspp/Core/HLE/sceKernelThread.cpp',
	'ppsspp/Core/HLE/sceKernelTime.cpp',
	'ppsspp/Core/HLE/sceKernelVTimer.cpp',
	'ppsspp/Core/HLE/sceMd5.cpp',
	'ppsspp/Core/HLE/sceMp3.cpp',
	'ppsspp/Core/HLE/sceMp4.cpp',
	'ppsspp/Core/HLE/sceMpeg.cpp',
	'ppsspp/Core/HLE/sceMt19937.cpp',
	'ppsspp/Core/HLE/sceNet.cpp',
	'ppsspp/Core/HLE/sceNetAdhoc.cpp',
	'ppsspp/Core/HLE/sceNetAdhocMatching.cpp',
	'ppsspp/Core/HLE/sceNetApctl.cpp',
	'ppsspp/Core/HLE/sceNetInet.cpp',
	'ppsspp/Core/HLE/sceNetResolver.cpp',
	'ppsspp/Core/HLE/sceNet_lib.cpp',
	'ppsspp/Core/HLE/sceNp.cpp',
	'ppsspp/Core/HLE/sceNp2.cpp',
	'ppsspp/Core/HLE/sceOpenPSID.cpp',
	'ppsspp/Core/HLE/sceP3da.cpp',
	'ppsspp/Core/HLE/sceParseHttp.cpp',
	'ppsspp/Core/HLE/sceParseUri.cpp',
	'ppsspp/Core/HLE/scePauth.cpp',
	'ppsspp/Core/HLE/scePower.cpp',
	'ppsspp/Core/HLE/scePsmf.cpp',
	'ppsspp/Core/HLE/scePspNpDrm_user.cpp',
	'ppsspp/Core/HLE/sceReg.cpp',
	'ppsspp/Core/HLE/sceRtc.cpp',
	'ppsspp/Core/HLE/sceSas.cpp',
	'ppsspp/Core/HLE/sceSfmt19937.cpp',
	'ppsspp/Core/HLE/sceSha256.cpp',
	'ppsspp/Core/HLE/sceSircs.cpp',
	'ppsspp/Core/HLE/sceSsl.cpp',
	'ppsspp/Core/HLE/sceUmd.cpp',
	'ppsspp/Core/HLE/sceUsb.cpp',
	'ppsspp/Core/HLE/sceUsbAcc.cpp',
	'ppsspp/Core/HLE/sceUsbCam.cpp',
	'ppsspp/Core/HLE/sceUsbGps.cpp',
	'ppsspp/Core/HLE/sceUsbMic.cpp',
	'ppsspp/Core/HLE/sceUtility.cpp',
	'ppsspp/Core/HLE/sceVaudio.cpp',
	'ppsspp/Core/HLE/SocketManager.cpp',
	'ppsspp/Core/HLE/__sceAudio.cpp',
	'ppsspp/Core/HW/AsyncIOManager.cpp',
	'ppsspp/Core/HW/Atrac3Standalone.cpp',
	'ppsspp/Core/HW/BufferQueue.cpp',
	'ppsspp/Core/HW/Camera.cpp',
	'ppsspp/Core/HW/Display.cpp',
	'ppsspp/Core/HW/MediaEngine.cpp',
	'ppsspp/Core/HW/MemoryStick.cpp',
	'ppsspp/Core/HW/MpegDemux.cpp',
	'ppsspp/Core/HW/SasAudio.cpp',
	'ppsspp/Core/HW/SasReverb.cpp',
	'ppsspp/Core/HW/SimpleAudioDec.cpp',
	'ppsspp/Core/HW/StereoResampler.cpp',
	'ppsspp/Core/Instance.cpp',
	'ppsspp/Core/KeyMap.cpp',
	'ppsspp/Core/KeyMapDefaults.cpp',
	'ppsspp/Core/Loaders.cpp',
	'ppsspp/Core/MemFault.cpp',
	'ppsspp/Core/MemMap.cpp',
	'ppsspp/Core/MemMapFunctions.cpp',
	'ppsspp/Core/MIPS/ARM64/Arm64Asm.cpp',
	'ppsspp/Core/MIPS/ARM64/Arm64CompALU.cpp',
	'ppsspp/Core/MIPS/ARM64/Arm64CompBranch.cpp',
	'ppsspp/Core/MIPS/ARM64/Arm64CompFPU.cpp',
	'ppsspp/Core/MIPS/ARM64/Arm64CompLoadStore.cpp',
	'ppsspp/Core/MIPS/ARM64/Arm64CompReplace.cpp',
	'ppsspp/Core/MIPS/ARM64/Arm64CompVFPU.cpp',
	'ppsspp/Core/MIPS/ARM64/Arm64IRAsm.cpp',
	'ppsspp/Core/MIPS/ARM64/Arm64IRCompALU.cpp',
	'ppsspp/Core/MIPS/ARM64/Arm64IRCompBranch.cpp',
	'ppsspp/Core/MIPS/ARM64/Arm64IRCompFPU.cpp',
	'ppsspp/Core/MIPS/ARM64/Arm64IRCompLoadStore.cpp',
	'ppsspp/Core/MIPS/ARM64/Arm64IRCompSystem.cpp',
	'ppsspp/Core/MIPS/ARM64/Arm64IRCompVec.cpp',
	'ppsspp/Core/MIPS/ARM64/Arm64IRJit.cpp',
	'ppsspp/Core/MIPS/ARM64/Arm64IRRegCache.cpp',
	'ppsspp/Core/MIPS/ARM64/Arm64Jit.cpp',
	'ppsspp/Core/MIPS/ARM64/Arm64RegCache.cpp',
	'ppsspp/Core/MIPS/ARM64/Arm64RegCacheFPU.cpp',
	'ppsspp/Core/MIPS/ARM/ArmAsm.cpp',
	'ppsspp/Core/MIPS/ARM/ArmCompALU.cpp',
	'ppsspp/Core/MIPS/ARM/ArmCompBranch.cpp',
	'ppsspp/Core/MIPS/ARM/ArmCompFPU.cpp',
	'ppsspp/Core/MIPS/ARM/ArmCompLoadStore.cpp',
	'ppsspp/Core/MIPS/ARM/ArmCompReplace.cpp',
	'ppsspp/Core/MIPS/ARM/ArmCompVFPU.cpp',
	'ppsspp/Core/MIPS/ARM/ArmCompVFPUNEON.cpp',
	'ppsspp/Core/MIPS/ARM/ArmCompVFPUNEONUtil.cpp',
	'ppsspp/Core/MIPS/ARM/ArmJit.cpp',
	'ppsspp/Core/MIPS/ARM/ArmRegCache.cpp',
	'ppsspp/Core/MIPS/ARM/ArmRegCacheFPU.cpp',
	'ppsspp/Core/MIPS/fake/FakeJit.cpp',
	'ppsspp/Core/MIPS/IR/IRAnalysis.cpp',
	'ppsspp/Core/MIPS/IR/IRCompALU.cpp',
	'ppsspp/Core/MIPS/IR/IRCompBranch.cpp',
	'ppsspp/Core/MIPS/IR/IRCompFPU.cpp',
	'ppsspp/Core/MIPS/IR/IRCompLoadStore.cpp',
	'ppsspp/Core/MIPS/IR/IRCompVFPU.cpp',
	'ppsspp/Core/MIPS/IR/IRFrontend.cpp',
	'ppsspp/Core/MIPS/IR/IRInst.cpp',
	'ppsspp/Core/MIPS/IR/IRInterpreter.cpp',
	'ppsspp/Core/MIPS/IR/IRJit.cpp',
	'ppsspp/Core/MIPS/IR/IRNativeCommon.cpp',
	'ppsspp/Core/MIPS/IR/IRPassSimplify.cpp',
	'ppsspp/Core/MIPS/IR/IRRegCache.cpp',
	'ppsspp/Core/MIPS/JitCommon/JitBlockCache.cpp',
	'ppsspp/Core/MIPS/JitCommon/JitBlockCache.cpp',
	'ppsspp/Core/MIPS/JitCommon/JitCommon.cpp',
	'ppsspp/Core/MIPS/JitCommon/JitCommon.cpp',
	'ppsspp/Core/MIPS/JitCommon/JitState.cpp',
	'ppsspp/Core/MIPS/JitCommon/JitState.cpp',
	'ppsspp/Core/MIPS/_MIPS.cpp',
	'ppsspp/Core/MIPS/MIPSAnalyst.cpp',
	'ppsspp/Core/MIPS/MIPSAsm.cpp',
	'ppsspp/Core/MIPS/MIPSCodeUtils.cpp',
	'ppsspp/Core/MIPS/MIPSDebugInterface.cpp',
	'ppsspp/Core/MIPS/MIPSDis.cpp',
	'ppsspp/Core/MIPS/MIPSDisVFPU.cpp',
	'ppsspp/Core/MIPS/MIPS/MipsJit.cpp',
	'ppsspp/Core/MIPS/MIPSInt.cpp',
	'ppsspp/Core/MIPS/MIPSIntVFPU.cpp',
	'ppsspp/Core/MIPS/MIPSStackWalk.cpp',
	'ppsspp/Core/MIPS/MIPSTables.cpp',
	'ppsspp/Core/MIPS/MIPSTracer.cpp',
	'ppsspp/Core/MIPS/MIPSVFPUFallbacks.cpp',
	'ppsspp/Core/MIPS/MIPSVFPUUtils.cpp',
	'ppsspp/Core/MIPS/RiscV/RiscVAsm.cpp',
	'ppsspp/Core/MIPS/RiscV/RiscVCompALU.cpp',
	'ppsspp/Core/MIPS/RiscV/RiscVCompBranch.cpp',
	'ppsspp/Core/MIPS/RiscV/RiscVCompFPU.cpp',
	'ppsspp/Core/MIPS/RiscV/RiscVCompLoadStore.cpp',
	'ppsspp/Core/MIPS/RiscV/RiscVCompSystem.cpp',
	'ppsspp/Core/MIPS/RiscV/RiscVCompVec.cpp',
	'ppsspp/Core/MIPS/RiscV/RiscVJit.cpp',
	'ppsspp/Core/MIPS/RiscV/RiscVRegCache.cpp',
	'ppsspp/Core/MIPS/x86/Asm.cpp',
	'ppsspp/Core/MIPS/x86/CompALU.cpp',
	'ppsspp/Core/MIPS/x86/CompBranch.cpp',
	'ppsspp/Core/MIPS/x86/CompFPU.cpp',
	'ppsspp/Core/MIPS/x86/CompLoadStore.cpp',
	'ppsspp/Core/MIPS/x86/CompReplace.cpp',
	'ppsspp/Core/MIPS/x86/CompVFPU.cpp',
	'ppsspp/Core/MIPS/x86/Jit.cpp',
	'ppsspp/Core/MIPS/x86/JitSafeMem.cpp',
	'ppsspp/Core/MIPS/x86/RegCache.cpp',
	'ppsspp/Core/MIPS/x86/RegCacheFPU.cpp',
	'ppsspp/Core/MIPS/x86/X64IRAsm.cpp',
	'ppsspp/Core/MIPS/x86/X64IRCompALU.cpp',
	'ppsspp/Core/MIPS/x86/X64IRCompBranch.cpp',
	'ppsspp/Core/MIPS/x86/X64IRCompFPU.cpp',
	'ppsspp/Core/MIPS/x86/X64IRCompLoadStore.cpp',
	'ppsspp/Core/MIPS/x86/X64IRCompSystem.cpp',
	'ppsspp/Core/MIPS/x86/X64IRCompVec.cpp',
	'ppsspp/Core/MIPS/x86/X64IRJit.cpp',
	'ppsspp/Core/MIPS/x86/X64IRRegCache.cpp',
	'ppsspp/Core/PSPLoaders.cpp',
	'ppsspp/Core/Replay.cpp',
	'ppsspp/Core/Reporting.cpp',
	'ppsspp/Core/SaveState.cpp',
	'ppsspp/Core/System.cpp',
	'ppsspp/Core/TiltEventProcessor.cpp',
	'ppsspp/Core/Util/AtracTrack.cpp',
	'ppsspp/Core/Util/AudioFormat.cpp',
	'ppsspp/Core/Util/BlockAllocator.cpp',
	'ppsspp/Core/Util/DisArm64.cpp',
	'ppsspp/Core/Util/DisArm64.cpp',
	'ppsspp/Core/Util/GameDB.cpp',
	'ppsspp/Core/Util/GameManager.cpp',
	'ppsspp/Core/Util/MemStick.cpp',
	'ppsspp/Core/Util/PortManager.cpp',
	'ppsspp/Core/Util/PPGeDraw.cpp',
	'ppsspp/Core/Util/RecentFiles.cpp',
	'ppsspp/Core/WaveFile.cpp',
	'ppsspp/ext/at3_standalone/atrac.cpp',
	'ppsspp/ext/at3_standalone/atrac3.cpp',
	'ppsspp/ext/at3_standalone/atrac3plus.cpp',
	'ppsspp/ext/at3_standalone/atrac3plusdec.cpp',
	'ppsspp/ext/at3_standalone/atrac3plusdsp.cpp',
	'ppsspp/ext/at3_standalone/compat.cpp',
	'ppsspp/ext/at3_standalone/fft.cpp',
	'ppsspp/ext/at3_standalone/get_bits.cpp',
	'ppsspp/ext/at3_standalone/mem.cpp',
	'ppsspp/ext/basis_universal/basisu_transcoder.cpp',
	'ppsspp/ext/cityhash/city.cpp',
	'ppsspp/ext/disarm.cpp',
	'ppsspp/ext/gason/gason.cpp',
	'ppsspp/ext/imgui/imgui.cpp',
	'ppsspp/ext/imgui/imgui_demo.cpp',
	'ppsspp/ext/imgui/imgui_draw.cpp',
	'ppsspp/ext/imgui/imgui_impl_platform.cpp',
	'ppsspp/ext/imgui/imgui_impl_thin3d.cpp',
	'ppsspp/ext/imgui/imgui_tables.cpp',
	'ppsspp/ext/imgui/imgui_widgets.cpp',
	'ppsspp/ext/jpge/jpgd.cpp',
	'ppsspp/ext/jpge/jpge.cpp',
	'ppsspp/ext/libkirk/AES.c',
	'ppsspp/ext/libkirk/amctrl.c',
	'ppsspp/ext/libkirk/bn.c',
	'ppsspp/ext/libkirk/ec.c',
	'ppsspp/ext/libkirk/kirk_engine.c',
	'ppsspp/ext/libkirk/SHA1.c',
	'ppsspp/ext/minimp3/minimp3.cpp',
	'ppsspp/ext/riscv-disas.cpp',
	'ppsspp/ext/sfmt19937/SFMT.c',
	'ppsspp/ext/udis86/decode.c',
	'ppsspp/ext/udis86/itab.c',
	'ppsspp/ext/udis86/syn-att.c',
	'ppsspp/ext/udis86/syn-intel.c',
	'ppsspp/ext/udis86/syn.c',
	'ppsspp/ext/udis86/udis86.c',
	'ppsspp/ext/xbrz/xbrz.cpp',
	'ppsspp/ext/_xxhash.c',
	'ppsspp/GPU/Common/DepalettizeShaderCommon.cpp',
	'ppsspp/GPU/Common/DepthBufferCommon.cpp',
	'ppsspp/GPU/Common/DepthRaster.cpp',
	'ppsspp/GPU/Common/Draw2D.cpp',
	'ppsspp/GPU/Common/DrawEngineCommon.cpp',
	'ppsspp/GPU/Common/FramebufferManagerCommon.cpp',
	'ppsspp/GPU/Common/GPUDebugInterface.cpp',
	'ppsspp/GPU/Common/GPUStateUtils.cpp',
	'ppsspp/GPU/Common/PostShader.cpp',
	'ppsspp/GPU/Common/PresentationCommon.cpp',
	'ppsspp/GPU/Common/ReinterpretFramebuffer.cpp',
	'ppsspp/GPU/Common/ReplacedTexture.cpp',
	'ppsspp/GPU/Common/ShaderCommon.cpp',
	'ppsspp/GPU/Common/ShaderId.cpp',
	'ppsspp/GPU/Common/ShaderUniforms.cpp',
	'ppsspp/GPU/Common/SoftwareTransformCommon.cpp',
	'ppsspp/GPU/Common/SplineCommon.cpp',
	'ppsspp/GPU/Common/StencilCommon.cpp',
	'ppsspp/GPU/Common/TextureCacheCommon.cpp',
	'ppsspp/GPU/Common/TextureDecoder.cpp',
	'ppsspp/GPU/Common/TextureReplacer.cpp',
	'ppsspp/GPU/Common/TextureScalerCommon.cpp',
	'ppsspp/GPU/Common/TextureShaderCommon.cpp',
	'ppsspp/GPU/Common/TransformCommon.cpp',
	'ppsspp/GPU/Common/VertexDecoderArm.cpp',
	'ppsspp/GPU/Common/VertexDecoderArm64.cpp',
	'ppsspp/GPU/Common/VertexDecoderCommon.cpp',
	'ppsspp/GPU/Common/VertexDecoderHandwritten.cpp',
	'ppsspp/GPU/Common/VertexDecoderRiscV.cpp',
	'ppsspp/GPU/Common/VertexDecoderX86.cpp',
	'ppsspp/GPU/Debugger/_Breakpoints.cpp',
	'ppsspp/GPU/Debugger/Debugger.cpp',
	'ppsspp/GPU/Debugger/GECommandTable.cpp',
	'ppsspp/GPU/Debugger/Playback.cpp',
	'ppsspp/GPU/Debugger/Record.cpp',
	'ppsspp/GPU/Debugger/State.cpp',
	'ppsspp/GPU/Debugger/Stepping.cpp',
	'ppsspp/GPU/GeConstants.cpp',
	'ppsspp/GPU/GeDisasm.cpp',
	'ppsspp/GPU/GPU.cpp',
	'ppsspp/GPU/GPUCommon.cpp',
	'ppsspp/GPU/GPUCommonHW.cpp',
	'ppsspp/GPU/GPUState.cpp',
	'ppsspp/GPU/Math3D.cpp',
	'ppsspp/GPU/Software/BinManager.cpp',
	'ppsspp/GPU/Software/Clipper.cpp',
	'ppsspp/GPU/Software/DrawPixel.cpp',
	'ppsspp/GPU/Software/DrawPixelX86.cpp',
	'ppsspp/GPU/Software/FuncId.cpp',
	'ppsspp/GPU/Software/Lighting.cpp',
	'ppsspp/GPU/Software/Rasterizer.cpp',
	'ppsspp/GPU/Software/RasterizerRectangle.cpp',
	'ppsspp/GPU/Software/RasterizerRegCache.cpp',
	'ppsspp/GPU/Software/Sampler.cpp',
	'ppsspp/GPU/Software/SamplerX86.cpp',
	'ppsspp/GPU/Software/SoftGpu.cpp',
	'ppsspp/GPU/Software/TransformUnit.cpp',
	'ppsspp/libretro/libretro.cpp',
	'ppsspp/libretro/LibretroGraphicsContext.cpp',
]

ppssppIncludeDirs = [
  '.',
  '..',
  'ppsspp/ext/glslang',
  'ppsspp/ext/glslang-build',
  'ppsspp',
  'ppsspp/ext',
  'ppsspp/libretro',
  'ppsspp/ext/OpenXR-SDK/include',
  'ppsspp/Common',
  'ppsspp/ext/libzip',
  'ppsspp/ext/libpng17',
  'ppsspp/ext/snappy/',
  'ppsspp/ffmpeg/linux/x86_64/include/',
  'ppsspp/ext/miniupnp-build/'
]

ppssppCompileArgs = [
	'-DUSE_FFMPEG=1',
	'-DNDEBUG',
	'-D_NDEBUG',
	'-DHAVE_GETAUXVAL',
	'-DHTTPS_NOT_AVAILABLE',
	'-DMASKED_PSP_MEMORY',
	'-DMINIUPNPC_SET_SOCKET_TIMEOUT',
	'-DMINIUPNP_STATICLIB',
	'-DNO_MMAP',
	'-DPNG_ARM_NEON_OPT=0',
	'-DSHARED_ZLIB',
	'-DVK_USE_PLATFORM_WAYLAND_KHR',
	'-DVK_USE_PLATFORM_XLIB_KHR',
	#'-DWITH_UPNP',
	'-D_BSD_SOURCE',
	'-D_DEFAULT_SOURCE',
	'-D_FILE_OFFSET_BITS=64',
	'-D_LARGEFILE64_SOURCE=1',
	'-D_POSIX_C_SOURCE=200112L',
	'-D_XOPEN_SOURCE_EXTENDED',
	'-D__BSD_VISIBLE=1',
	'-D__LIBRETRO__',
	'-D__STDC_CONSTANT_MACROS',
	'-DSTACK_LINE_READER_BUFFER_SIZE=1024',
	'-DSFMT_MEXP=19937',
	'-DENABLE_HLSL',
	'-DENABLE_OPT=0',
	'-DGLSLANG_OSINCLUDE_UNIX',
	'-D_7ZIP_ST',
	#'-D__SWITCH__',
	'-DSPIRV_CROSS_EXCEPTIONS_TO_ASSERTIONS',
	'-D__STDC_LIMIT_MACROS',
	'-DHAVE_LIBAVCODEC_CONST_AVCODEC=1',
	'-Dppsspp_libretro_EXPORTS',
	'-DNO_ARMIPS',
]

# ppsspp Core Configuration

 ppssppDependency = declare_dependency(
  compile_args        : [  ppssppCompileArgs ],
  link_args           : [  ],
  include_directories : include_directories(ppssppIncludeDirs),
  sources             : [ ppssppSrc ],
  dependencies        : [  
                          dependency('sdl2',  required : true),
                        ]
 )
